--- a/02-Custom Login/bower.json
+++ b/02-Custom Login/bower.json
@@ -2,6 +2,7 @@
   "name": "HelloIonic",
   "private": "true",
   "dependencies": {
+    "auth0.js": "*",
     "auth0-angular": "4.*",
     "a0-angular-storage": ">= 0.0.13",
     "angular-jwt": ">= 0.0.9"
