--- a/01-Login/bower.json
+++ b/01-Login/bower.json
@@ -2,10 +2,10 @@
   "name": "HelloIonic",
   "private": "true",
   "dependencies": {
-    "auth0-lock": "9.2.2",
-    "auth0-angular": "4.*",
+    "auth0-lock": "10.1.0",
     "a0-angular-storage": ">= 0.0.13",
-    "angular-jwt": ">= 0.0.9"
+    "angular-jwt": ">= 0.1.0",
+    "angular-lock": "~1.0.1"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
