--- a/05-Rules/bower.json
+++ b/05-Rules/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "HelloIonic",
+  "name": "auth0-ionic",
   "private": "true",
   "dependencies": {
-    "auth0-lock": "9.2.2",
-    "auth0-angular": "4.*",
+    "auth0-lock": "10.2.0",
     "a0-angular-storage": ">= 0.0.13",
-    "angular-jwt": ">= 0.0.9"
+    "angular-jwt": ">= 0.1.3",
+    "angular-lock": "~1.0.1"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
