--- a/02-Custom-Login/bower.json
+++ b/02-Custom-Login/bower.json
@@ -1,12 +1,9 @@
 {
-  "name": "HelloIonic",
+  "name": "auth0-ionic",
   "private": "true",
   "dependencies": {
-    "auth0-lock": "9.2.2",
-    "auth0.js": "*",
-    "auth0-angular": "4.*",
-    "a0-angular-storage": ">= 0.0.13",
-    "angular-jwt": ">= 0.0.9"
+    "angular-auth0": "^1.0.0",
+    "angular-jwt": "~0.1.0"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
