--- a/01-Login/package.json
+++ b/01-Login/package.json
@@ -4,15 +4,15 @@
   "description": "blank: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "gulp-util": "^3.0.7",
+    "shelljs": "^0.7.5"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
