--- a/01-Login/bower.json
+++ b/01-Login/bower.json
@@ -1,12 +1,13 @@
 {
-  "name": "auth0-ionic",
+  "name": "HelloIonic",
   "private": "true",
-  "dependencies": {
-    "auth0-lock": "10.10.2",
-    "angular-jwt": ">= 0.1.3",
-    "angular-lock": "~1.0.1"
-  },
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.1"
+    "ionic": "driftyco/ionic-bower#1.3.3"
+  },
+  "dependencies": {
+    "angular-jwt": "^0.1.9",
+    "angular-lock": "^2.0.2",
+    "auth0-lock": "^10.14.0",
+    "auth0.js": "^8.5.0"
   }
 }
