--- a/01-Login/package.json
+++ b/01-Login/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "blank",
+  "name": "login",
   "version": "1.1.1",
-  "description": "blank: An Ionic project",
+  "description": "Login: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^3.0.7",
-    "shelljs": "^0.7.5"
+    "gulp-util": "^2.2.14",
+    "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -20,8 +20,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser"
+    "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": []
 }
