chore(angular): rename package as to not confuse Snyk

--- a/angular/package.json
+++ b/angular/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular",
-  "version": "0.0.1",
+  "name": "auth0-ionic-angular-sample",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
