--- a/react/src/auth.config.ts.example
+++ b/react/src/auth.config.ts.example
@@ -1,9 +1,9 @@
 import { isPlatform } from "@ionic/react";
 
-export const domain = "{DOMAIN}";
+export const auth0Domain = "{DOMAIN}";
 export const clientId = "{CLIENT_ID}";
 const appId = "com.auth0.samples";
 
 export const callbackUri = isPlatform("desktop")
   ? "http://localhost:3000"
-  : `${appId}://${domain}/capacitor/${appId}/callback`;
+  : `${appId}://${auth0Domain}/capacitor/${appId}/callback`;
