--- a/angular/src/app/auth.config.ts.example
+++ b/angular/src/app/auth.config.ts.example
@@ -1,10 +1,13 @@
 import { isPlatform } from "@ionic/angular";
 import config from "../../capacitor.config";
 
-const auth0Domain = "{DOMAIN}";
+export const domain = "{DOMAIN}";
 export const clientId = "{CLIENT_ID}";
 const { appId } = config;
-export const domain = auth0Domain;
+
+// Use `auth0Domain` in string interpolation below so that it doesn't
+// get replaced by the quickstart auto-packager
+const auth0Domain = domain;
 
 export const callbackUri = isPlatform("desktop")
   ? "http://localhost:4200"
