--- a/angular/src/app/auth.config.ts.example
+++ b/angular/src/app/auth.config.ts.example
@@ -5,6 +5,10 @@ export const domain = "{DOMAIN}";
 export const clientId = "{CLIENT_ID}";
 const { appId } = config;
 
+// Use `auth0Domain` in string interpolation below so that it doesn't
+// get replaced by the quickstart auto-packager
+const auth0Domain = domain;
+
 export const callbackUri = isPlatform("desktop")
   ? "http://localhost:4200"
-  : `${appId}://${domain}/capacitor/${appId}/callback`;
+  : `${appId}://${auth0Domain}/capacitor/${appId}/callback`;
