--- a/react/src/auth.config.ts.example
+++ b/react/src/auth.config.ts.example
@@ -4,6 +4,10 @@ export const domain = "{DOMAIN}";
 export const clientId = "{CLIENT_ID}";
 const appId = "com.auth0.samples";
 
+// Use `auth0Domain` in string interpolation below so that it doesn't
+// get replaced by the quickstart auto-packager
+const auth0Domain = domain;
+
 export const callbackUri = isPlatform("desktop")
   ? "http://localhost:3000"
-  : `${appId}://${domain}/capacitor/${appId}/callback`;
+  : `${appId}://${auth0Domain}/capacitor/${appId}/callback`;
