Fix platform detection in auth config (#78)
* Fix platform detection in auth config

* Use port 3000 for React on desktop

--- a/react/src/auth.config.ts.example
+++ b/react/src/auth.config.ts.example
@@ -7,7 +7,8 @@ const appId = "com.auth0.samples";
 // Use `auth0Domain` in string interpolation below so that it doesn't
 // get replaced by the quickstart auto-packager
 const auth0Domain = domain;
+const iosOrAndroid = isPlatform('ios') || isPlatform('android');
 
-export const callbackUri = isPlatform("desktop")
-  ? "http://localhost:3000"
-  : `${appId}://${auth0Domain}/capacitor/${appId}/callback`;
+export const callbackUri = iosOrAndroid
+  ? `${appId}://${auth0Domain}/capacitor/${appId}/callback`
+  : 'http://localhost:3000';
