--- a/angular/package.json
+++ b/angular/package.json
@@ -67,5 +67,8 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.0.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "prettier": {
+    "singleQuote": true
+  }
 }
