chore: update angular-eslint/builder

--- a/angular/package.json
+++ b/angular/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.4",
-    "@angular-eslint/builder": "2.0.2",
+    "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "2.0.2",
     "@angular-eslint/eslint-plugin-template": "2.0.2",
     "@angular-eslint/template-parser": "2.0.2",
