--- a/angular/package.json
+++ b/angular/package.json
@@ -65,7 +65,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.6.4"
   },
   "description": "An Ionic project",
   "prettier": {
