chore: update angular compiler

--- a/angular/package.json
+++ b/angular/package.json
@@ -41,8 +41,8 @@
     "@angular-eslint/eslint-plugin-template": "2.0.2",
     "@angular-eslint/template-parser": "2.0.2",
     "@angular/cli": "~11.2.4",
-    "@angular/compiler": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
+    "@angular/compiler": "^12.2.16",
+    "@angular/compiler-cli": "^12.2.16",
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "^3.0.2",
     "@ionic/angular-toolkit": "^2.1.2",
