--- a/angular/package.json
+++ b/angular/package.json
@@ -14,12 +14,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
+    "@angular/common": "^12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/forms": "~12.2.16",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
     "@auth0/auth0-angular": "^1.9.0",
     "@capacitor/android": "^3.5.0",
     "@capacitor/app": "^1.1.1",
@@ -43,7 +43,7 @@
     "@angular/cli": "~11.2.4",
     "@angular/compiler": "^12.2.16",
     "@angular/compiler-cli": "^12.2.16",
-    "@angular/language-service": "~11.2.0",
+    "@angular/language-service": "~12.2.16",
     "@capacitor/cli": "^3.0.2",
     "@ionic/angular-toolkit": "^2.1.2",
     "@types/jasmine": "~3.6.0",
