chore: update angular devkit

--- a/angular/package.json
+++ b/angular/package.json
@@ -35,7 +35,7 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.4",
+    "@angular-devkit/build-angular": "^12.2.17",
     "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "2.0.2",
     "@angular-eslint/eslint-plugin-template": "2.0.2",
