--- a/angular/package.json
+++ b/angular/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.17",
     "@angular-eslint/builder": "^13.2.1",
-    "@angular-eslint/eslint-plugin": "2.0.2",
+    "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/eslint-plugin-template": "2.0.2",
     "@angular-eslint/template-parser": "2.0.2",
     "@angular/cli": "~12.2.17",
