--- a/angular/package.json
+++ b/angular/package.json
@@ -30,7 +30,7 @@
     "@capacitor/keyboard": "^1.2.2",
     "@capacitor/status-bar": "^1.0.8",
     "@ionic/angular": "^6.1.5",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
