--- a/angular/package.json
+++ b/angular/package.json
@@ -46,25 +46,25 @@
     "@angular/language-service": "~13.3.8",
     "@capacitor/cli": "^3.0.2",
     "@ionic/angular-toolkit": "^6.1.0",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@types/node": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jasmine-core": "^4.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^5.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "description": "An Ionic project",
