--- a/react/package.json
+++ b/react/package.json
@@ -12,8 +12,8 @@
     "@capacitor/ios": "^3.5.0",
     "@capacitor/keyboard": "^1.2.2",
     "@capacitor/status-bar": "^1.0.8",
-    "@ionic/react": "^5.9.3",
-    "@ionic/react-router": "^5.9.3",
+    "@ionic/react": "^6.1.5",
+    "@ionic/react-router": "^6.1.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
@@ -47,7 +47,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
