--- a/angular/package.json
+++ b/angular/package.json
@@ -14,12 +14,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
+    "@angular/common": "^13.3.8",
+    "@angular/core": "~13.3.8",
+    "@angular/forms": "~13.3.8",
+    "@angular/platform-browser": "~13.3.8",
+    "@angular/platform-browser-dynamic": "~13.3.8",
+    "@angular/router": "~13.3.8",
     "@auth0/auth0-angular": "^1.9.0",
     "@capacitor/android": "^3.5.0",
     "@capacitor/app": "^1.1.1",
@@ -29,43 +29,46 @@
     "@capacitor/ios": "^3.5.0",
     "@capacitor/keyboard": "^1.2.2",
     "@capacitor/status-bar": "^1.0.8",
-    "@ionic/angular": "^5.9.3",
-    "rxjs": "~6.6.0",
+    "@ionic/angular": "^6.1.5",
+    "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.4",
-    "@angular-eslint/builder": "2.0.2",
-    "@angular-eslint/eslint-plugin": "2.0.2",
-    "@angular-eslint/eslint-plugin-template": "2.0.2",
-    "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
-    "@angular/language-service": "~11.2.0",
+    "@angular-devkit/build-angular": "^13.3.5",
+    "@angular-eslint/builder": "^13.2.1",
+    "@angular-eslint/eslint-plugin": "^13.2.1",
+    "@angular-eslint/eslint-plugin-template": "^13.2.1",
+    "@angular-eslint/template-parser": "^13.2.1",
+    "@angular/cli": "~13.3.5",
+    "@angular/compiler": "^13.3.8",
+    "@angular/compiler-cli": "^13.3.8",
+    "@angular/language-service": "~13.3.8",
     "@capacitor/cli": "^3.0.2",
-    "@ionic/angular-toolkit": "^2.1.2",
-    "@types/jasmine": "~3.6.0",
+    "@ionic/angular-toolkit": "^6.1.0",
+    "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@types/node": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jasmine-core": "^4.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^5.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "prettier": {
+    "singleQuote": true
+  }
 }
