.template file now using vue module

--- a/vue/src/auth.config.ts.example
+++ b/vue/src/auth.config.ts.example
@@ -1,4 +1,4 @@
-import { isPlatform } from "@ionic/react";
+import { isPlatform } from "@ionic/vue";
 
 export const domain = "{DOMAIN}";
 export const clientId = "{CLIENT_ID}";
