--- a/angular/package.json
+++ b/angular/package.json
@@ -14,12 +14,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^13.3.11",
-    "@angular/core": "~13.3.8",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/common": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
     "@auth0/auth0-angular": "^1.10.0",
     "@capacitor/android": "^4.0.0",
     "@capacitor/app": "^4.0.0",
@@ -35,15 +35,15 @@
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.7",
+    "@angular-devkit/build-angular": "^14.1.1",
     "@angular-eslint/builder": "^13.5.0",
     "@angular-eslint/eslint-plugin": "^13.5.0",
     "@angular-eslint/eslint-plugin-template": "^13.5.0",
     "@angular-eslint/template-parser": "^13.5.0",
-    "@angular/cli": "~13.3.7",
-    "@angular/compiler": "^13.3.8",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/language-service": "~13.3.11",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "^14.1.1",
     "@capacitor/cli": "^4.0.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "^4.0.3",
