Dependency update & Angular 14 & Capacitor 4.0 (#275)
* chore(react): run npm update && npm audit fix

* chore(react): update capacitor + min ios deployment target to 13

* chore(react): run npx cap migrate

* chore(angular): run npm update && npm audit fix

* chore(angular): run npx cap migrate

* chore(angular): update to Angular 14

* chore: add gitignore at root level

--- a/angular/package.json
+++ b/angular/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^13.3.11",
-    "@angular/core": "~13.3.8",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/common": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
     "@auth0/auth0-angular": "^1.10.0",
-    "@capacitor/android": "^3.7.0",
-    "@capacitor/app": "^1.1.1",
-    "@capacitor/browser": "^1.0.7",
-    "@capacitor/core": "^3.7.0",
-    "@capacitor/haptics": "^1.1.4",
-    "@capacitor/ios": "^3.7.0",
-    "@capacitor/keyboard": "^1.2.3",
-    "@capacitor/status-bar": "^1.0.8",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/browser": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/ios": "^4.0.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/status-bar": "^4.0.0",
     "@ionic/angular": "^6.2.0",
     "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.7",
+    "@angular-devkit/build-angular": "^14.1.1",
     "@angular-eslint/builder": "^13.5.0",
     "@angular-eslint/eslint-plugin": "^13.5.0",
     "@angular-eslint/eslint-plugin-template": "^13.5.0",
     "@angular-eslint/template-parser": "^13.5.0",
-    "@angular/cli": "~13.3.7",
-    "@angular/compiler": "^13.3.8",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/language-service": "~13.3.11",
-    "@capacitor/cli": "^3.7.0",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "^14.1.1",
+    "@capacitor/cli": "^4.0.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "~2.0.3",
