--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   build-executor:
     docker:
-      - image: circleci/node:16.10.0-browsers
+      - image: cimg/node:lts-browsers
 commands:
   build-node:
     parameters:
