--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ commands:
     description: "Builds and tests a node project"
     steps:
       - browser-tools/install-browser-tools
-      - checkout
       - run: |
           node --version
           google-chrome --version
@@ -46,10 +45,21 @@ commands:
           command: << parameters.test_cmd >>
           working_directory: << parameters.working_directory >>
 jobs:
+  checkout:
+    executor:
+      name: build-executor
+    steps:
+      - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
   build-angular:
     executor:
       name: build-executor
     steps:
+      - attach_workspace:
+          at: .
       - build-node:
           working_directory: angular
           config_path: src/app
@@ -58,11 +68,18 @@ jobs:
     executor:
       name: build-executor
     steps:
+      - attach_workspace:
+          at: .
       - build-node:
           working_directory: react
           config_path: src
 workflows:
   build-samples:
     jobs:
-      - build-angular
-      - build-react
+      - checkout
+      - build-angular:
+          requires:
+            - checkout
+      - build-react:
+          requires:
+            - checkout
