--- a/vue/package.json
+++ b/vue/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "@auth0/auth0-vue": "^1.0.1",
+    "@auth0/auth0-vue": "^2.0.0-beta.0",
     "@capacitor/android": "^3.5.1",
     "@capacitor/app": "1.1.1",
     "@capacitor/browser": "^1.0.7",
