--- a/react/package.json
+++ b/react/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "beta",
+    "@auth0/auth0-react": "^2.0.0",
     "@capacitor/android": "^4.5.0",
     "@capacitor/app": "^4.1.1",
     "@capacitor/browser": "^4.1.0",
