--- a/angular/package.json
+++ b/angular/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
-    "@auth0/auth0-angular": "^2.0.0-beta.0",
+    "@auth0/auth0-angular": "^2.0.0",
     "@capacitor/android": "^4.5.0",
     "@capacitor/app": "^4.1.1",
     "@capacitor/browser": "^4.1.0",
