--- a/.github/ISSUE_TEMPLATE/Feature Request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature Request.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Checklist
       options:
-        - label: I have looked into the Readme ([React](https://github.com/auth0-samples/auth0-ionic-samples/tree/main/react#readme)/[Angular](https://github.com/auth0-samples/auth0-ionic-samples/tree/main/angular#readme)) and have not found a suitable solution or answer.
+        - label: I have looked into the Readme ([React](https://github.com/auth0-samples/auth0-ionic-samples/tree/main/react#readme)/[Angular](https://github.com/auth0-samples/auth0-ionic-samples/tree/main/angular#readme)/[Vue](https://github.com/auth0-samples/auth0-ionic-samples/tree/main/vue#readme)) and have not found a suitable solution or answer.
           required: true
         - label: I have searched the [issues](https://github.com/auth0-samples/auth0-ionic-samples/issues) and have not found a suitable solution or answer.
           required: true
