--- a/vue/package.json
+++ b/vue/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.0.0",
-    "@capacitor/android": "^3.5.1",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/browser": "^1.0.7",
-    "@capacitor/core": "3.5.1",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "^3.5.1",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/browser": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/ios": "^4.0.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/status-bar": "^4.0.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@vue/vue3-jest": "^29.2.2",
@@ -28,7 +28,7 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.0.3",
+    "@capacitor/cli": "^4.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
