--- a/vue/package.json
+++ b/vue/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
@@ -21,15 +21,11 @@
     "@capacitor/status-bar": "^5.0.0",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
-    "@vue/vue3-jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^29.0.5",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -39,10 +35,9 @@
     "cypress": "^13.2.0",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
-    "jest": "^29.3.1",
     "typescript": "^4.3.5",
     "vite": "4.0.5",
-    "vitest": "^0.27.2"
+    "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
 }
