Update remaining dependencies

--- a/vue/package.json
+++ b/vue/package.json
@@ -19,24 +19,23 @@
     "@capacitor/ios": "^5.0.0",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/status-bar": "^5.0.0",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "vue": "^3.2.21",
+    "@ionic/vue": "^7.5.3",
+    "@ionic/vue-router": "^7.5.3",
+    "vue": "^3.3.8",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
     "cypress": "^13.2.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "typescript": "^4.3.5",
-    "vite": "4.0.5",
+    "eslint": "^8.53.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "typescript": "^5.2.2",
+    "vite": "4.5.0",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
