--- a/vue/package.json
+++ b/vue/package.json
@@ -6,43 +6,37 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.0.0",
-    "@capacitor/android": "^3.5.1",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/browser": "^1.0.7",
-    "@capacitor/core": "3.5.1",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "^3.5.1",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "@vue/vue3-jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^29.0.5",
-    "vue": "^3.2.21",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/browser": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
+    "@ionic/vue": "^7.5.3",
+    "@ionic/vue-router": "^7.5.3",
+    "vue": "^3.3.8",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.0.3",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@capacitor/cli": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
     "cypress": "^13.2.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^29.3.1",
-    "typescript": "^4.3.5",
-    "vite": "4.0.5",
-    "vitest": "^0.27.2"
+    "eslint": "^8.53.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "typescript": "^5.2.2",
+    "vite": "4.5.0",
+    "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
 }
