--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.55",
-    "@types/react": "^18.2.0",
+    "@types/react": "18.2.19",
     "@types/react-dom": "^18.2.1",
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
@@ -69,7 +69,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.6.0"
+    "@capacitor/cli": "^5.6.0",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   },
   "description": "An Ionic project"
 }
